manifests/apps/03-files/03-archivebox/03-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: archivebox
spec:
  selector:
    matchLabels:
      name: archivebox
  template:
    metadata:
      labels:
        name: archivebox
    spec:
      containers:
      - name: archivebox
        image: archivebox/archivebox:master
        imagePullPolicy: Always
        args: ["server", "--quick-init", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /data
          name: archivebox-data
      volumes:
      - name: archivebox-data
        hostPath:
          path: /mnt/gluster/gluster/files/archivebox
