manifests/apps/03-files/03-archivebox/03-service.yml
---
# Source: authelia/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archivebox-service
  namespace: archivebox
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    name: archivebox
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
