manifests/apps/03-files/03-archivebox/04-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivebox-ingress
  namespace: archivebox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: archivebox.codekernel.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivebox-service
                port:
                  number: 8000
  tls:
  - hosts:
    - archivebox.codekernel.co.uk
