manifests/apps/03-files/03-archivebox/05-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivebox-ingress
  namespace: archivebox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.codekernel.co.uk?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
spec:
  rules:
    - host: archivebox.codekernel.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivebox-service
                port:
                  number: 8000
  tls:
  - hosts:
    - archivebox.codekernel.co.uk
